#112 fixed profile image size on safari

--- a/client/src/styles/posts.css
+++ b/client/src/styles/posts.css
@@ -69,6 +69,10 @@
     margin: 1em auto;
 }
 
+.comment-list form {
+    margin-bottom: 1em;
+}
+
 .comment {
     margin: 1em;
 }
