--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -21,8 +21,8 @@
 }
 
 .profile-image-wrap {
-    width: 240px;
-    height: 260px;
+    width: 220px;
+    height: 240px;
     margin-bottom: 2em;
 }
 
